log
Thu, Mar 27, 2025 10:21:48 PM: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025 10:22:16 PM: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
e68c3bc
Thu, Mar 27, 2025 10:24:04 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1ab9346
Thu, Mar 27, 2025 10:24:54 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
54e9f14
Thu, Mar 27, 2025 10:26:26 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
e471e04
Thu, Mar 27, 2025 10:26:53 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
7fc3cb3
Thu, Mar 27, 2025 10:31:55 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'nextList':
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d0c309d
Thu, Mar 27, 2025 10:32:31 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'nextList':
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
8baec16
Thu, Mar 27, 2025 10:35:28 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'nextList':
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
4a4acd1
Thu, Mar 27, 2025 10:36:23 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'nextList':
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
dc9e0c5
Thu, Mar 27, 2025 10:39:15 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'nextList':
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
90b143d
Thu, Mar 27, 2025 10:40:33 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:49:1: error: expected ';' before '}' token
 }
 ^
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
fdaa507
Thu, Mar 27, 2025 10:42:33 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
21e8348
Thu, Mar 27, 2025 10:43:03 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
204b7a4
Thu, Mar 27, 2025 10:43:39 PM: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
e22d2fd
Thu, Mar 27, 2025 10:59:46 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'nextList':
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
b4c8830
Thu, Mar 27, 2025 11:00:46 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
1dbf340
Thu, Mar 27, 2025 11:06:18 PM: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'nextList':
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
2f820a2
